tests/fixtures/errors/readonly-output/src/Main.elm
module Main exposing (main)

import Html

main = Html.text "Main"
